log
Sun, May  4, 2025  8:48:39 PM: 
 treemap.c | 70 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 65 insertions(+), 5 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Sun, May  4, 2025  8:53:22 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
ddb85f3
Sun, May  4, 2025  8:53:59 PM: 
 tests:  5|7
total_score: 5/70
155e805
Sun, May  4, 2025  9:26:58 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
7246f79
Sun, May  4, 2025  9:28:21 PM: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  13|5
total_score: 25/70
e90f8c1
Sun, May  4, 2025  9:30:12 PM: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
e0fa126
Sun, May  4, 2025 10:25:07 PM: 
 treemap.c | 54 +++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 53 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
3b33b63
